# startup-success

./: .gitignore  Makefile  README.md  pyproject.toml
notebooks/: preprocessing.ipynb  proc_model_combo.ipynb  random_forest_model.ipynb
reports/: classification_report.txt
startup_success/: __init__.py  config.py  dataset.py  features.py  plots.py  report.py
startup_success/modeling/: predict.py  train.py
